# privacy-preserving-fl-healthcare-iot

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  experiment_dp.yaml  experiment_full.yaml  experiment_secagg.yaml
configs/followup_records200/: default.yaml  experiment_dp.yaml  experiment_full.yaml  experiment_secagg.yaml
docs/: architecture.md  privacy-analysis.md  threat-model.md
docs/presentation/: build.sh  main.tex
docs/thesis/: build.sh  main.tex
experiments/: _common.py  run_centralized.py  run_federated.py  run_federated_dp.py  run_federated_secagg.py  run_full_pipeline.py
notebooks/: 01_data_exploration.ipynb  02_baseline_vs_federated.ipynb  03_privacy_utility_tradeoff.ipynb
scripts/: run_all_experiments.sh  run_centralized.sh  run_federated.sh  run_federated_dp.sh  run_full_pipeline.sh
src/: __init__.py
src/client/: __init__.py  dp_trainer.py  flower_client.py  iot_device.py
src/data/: __init__.py  mitbih_loader.py  partitioner.py  preprocessing.py
src/models/: __init__.py  ecg_cnn.py  lightweight.py
src/privacy/: __init__.py  compression.py  differential_privacy.py  secure_agg.py
src/server/: __init__.py  flower_server.py  secure_aggregation.py  strategies.py
src/utils/: __init__.py  config.py  logging_utils.py  metrics.py  seed.py
tests/: test_compression.py  test_config.py  test_data.py  test_dp.py  test_metrics.py  test_models.py  test_secagg.py
